tests/ui/privacy/missing-mir-priv-bounds-2.stderr
error: missing optimized MIR for `dep::m::Unreachable::generic::<i32>` in the crate `missing_mir_priv_bounds_extern_2`
   |
note: missing optimized MIR for this item (was the crate `missing_mir_priv_bounds_extern_2` compiled with `--emit=metadata`?)
  --> $DIR/auxiliary/missing-mir-priv-bounds-extern-2.rs:40:9
   |
LL |         pub fn generic<T>() {}
   |         ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

